fixed notices
fixed field favorite
