# controllers/notice/getList.js
@@ -1,4 +1,5 @@
 const { Notice } = require("../../models/notice");
+const { User } = require("../../models/user");
 
 const getList = async (req, res) => {
   const { page = 1, limit = 20, title = "", category = "" } = req.query;
@@ -15,6 +16,8 @@ const getList = async (req, res) => {
 
   const result = await Notice.aggregate([
     { $match: queryString },
+    { $addFields: { favorite: false } },
+    { $project: { createdAt: 0, updatedAt: 0 } },
     {
       $facet: {
         totalCount: [{ $count: "count" }],
@@ -30,6 +33,16 @@ const getList = async (req, res) => {
       },
     },
   ]);
+
+  if (req?.user?._id) {
+    const { favorites } = await User.findById(req.user._id, "favorites");
+
+    result[0].notices.forEach((e) => {
+      if (favorites.includes(e._id)) {
+        e.favorite = true;
+      }
+    });
+  }
 
   res.json(result);
 };
